<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dep_site">http://amd.stu.neva.ru/</string>
    <string name="splash_screen_head_string">Department of Applied Mathematics, SPbPU</string>
    <string name="app_name">LineGame</string>
    <string name="new_game_button_string">New game</string>
    <string name="scores_table_button_string">Scores</string>
    <string name="tap_to_start_string">Tap and hold to play!</string>
    <string name="tap_to_continue_string">Tap to continue!</string>
    <string name="game_over_string">Game over!</string>
    <string name="dist_text_string">distance</string>
    <string name="dist_val_at_start">0</string>
    <string name="rules_btn_string">Rules</string>
    <string name="go_to_site_btn_string">To site</string>
</resources>
