<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:background="@color/main_background_color">

    <org.spbstu.linegame.view.LineGameView
        android:id="@+id/LineGameView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/tap_to_start_string"
        android:textSize="@dimen/start_text_size"
        android:gravity="center"
        android:textColor="@color/tap_to_play_string_color"
        android:textStyle="bold"
        android:id="@+id/CenteredText" android:layout_gravity="center"/>

    <!-- Text heading line with score number -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/score_text_layout_height"
        android:text="@string/dist_text_string"
        android:visibility="gone"
        android:layout_marginRight="@dimen/score_text_right_margin"
        android:textSize="@dimen/score_text_size"
        android:gravity="end"
        android:textColor="@color/score_text_color"
        android:textStyle="bold"
        android:id="@+id/ScoreLineTextView"
        android:layout_gravity="end|top" />

    <!-- Score number -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/score_value_layout_height"
        android:layout_marginRight="@dimen/score_text_right_margin"
        android:text="@string/dist_val_at_start"
        android:visibility="gone"
        android:textSize="@dimen/score_text_size"
        android:gravity="end"
        android:textColor="@color/score_text_color"
        android:textStyle="bold"
        android:id="@+id/ScoreValueTextView"
        android:layout_gravity="end|top"
        android:layout_marginTop="@dimen/score_value_layout_margin_top" />


</FrameLayout>