<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:id="@+id/layoutContainer"
              android:orientation="horizontal"
              android:baselineAligned="false"
              android:background="@color/main_background_color">
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.17">
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.66">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <org.spbstu.linegame.custom.GravityButton
                android:text="@string/new_game_button_string"
                android:id="@+id/btnNewGame"
                android:textAppearance="@style/main_menu_text_style"
                android:background="@drawable/menu_button"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_menu_btn_height"
                android:layout_gravity="center_horizontal"
                android:alpha="0.95"
                android:onClick="onClick_btnNewGame"
                android:layout_marginBottom="@dimen/main_menu_btn_v_margin"
                />
            <org.spbstu.linegame.custom.GravityButton
                android:text="@string/scores_table_button_string"
                android:id="@+id/btnScores"
                android:textAppearance="@style/main_menu_text_style"
                android:background="@drawable/menu_button"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_menu_btn_height"
                android:layout_gravity="center_horizontal"
                android:alpha="0.95"
                android:onClick="onClick_btnScores"
                android:layout_marginBottom="@dimen/main_menu_btn_v_margin"
                />
            <org.spbstu.linegame.custom.GravityButton
                android:text="@string/rules_btn_string"
                android:id="@+id/btnRules"
                android:textAppearance="@style/main_menu_text_style"
                android:background="@drawable/menu_button"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/main_menu_btn_height"
                android:layout_gravity="center_horizontal"
                android:alpha="0.95"
                android:onClick="onClick_btnRules"
                android:layout_marginBottom="@dimen/main_menu_btn_v_margin"
                />
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.17">
    </RelativeLayout>
</LinearLayout>

